Add icon to website

--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="https://img1.picmix.com/output/stamp/normal/4/6/5/4/2444564_f86a6.gif" />
 		<title>Gabiii</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
